quiz vocabulary animals topic

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -34,13 +34,15 @@
         <div>
             <h3>Грађење речника</h3>
             <button class="btn btn-success btn-lg">1</button>
-            <span>- todo: kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <span>- пси (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
             <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg" routerLink="/quiz/vocabulary/zivotinje">2</button>
             <span> - животиње</span>&nbsp;&nbsp;&nbsp;&nbsp;
             <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg" routerLink="/quiz/vocabulary/kuhinja">3</button>
             <span> - кухиња</span>&nbsp;&nbsp;&nbsp;&nbsp;
             <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">4</button>
-            <span> - todo: kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <span> - инсекти (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button>
+            <span> - птице (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
         </div>
         <br>
         <div>
