--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,6 @@
       <span class="text-uppercase"></span>
       <!--<p>А а Б б В в Г г Ѓ ѓ Д д Е е Ж ж Ѕ ѕ З з И и Ј ј К к Ќ ќ Л л Ԓ ԓ Љ љ 
         М м Н н Њ њ О о П п Р р С с Т т У у Ф ф Х х Ц ц Ч ч Џ џ Ш ш Ъ ъ</p>-->
-      <!--<p style="font-family: tahoma;">ъ̀ а̀ ѝ ѐ о̀ ỳ  Л л Ԓ ԓ Љ љ й ă</p>-->
+      <p style="font-family: tahoma;">ъ̀ а̀ ѝ ѐ о̀ ỳ  Л л Ԓ ԓ Љ љ й ă</p>
     </div>
-  </nav>
+</nav>
