quiz vocab birds

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -53,20 +53,21 @@
                 <span> - инсекти</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button>
-                <span> - птице (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
+                    routerLink="/quiz/vocabulary/ptice">5</button>
+                <span> - птице</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">6</button>
-                <span> - птице (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">7</button>
-                <span> - птице (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">8</button>
-                <span> - птице (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
         </div>
         <br /><br />
