incorrect answer bug found and fixed

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -34,8 +34,8 @@
         <div class="row">
             <h3>Грађење речника</h3><br />
             <div class="col-md-2 column">
-                <button class="btn btn-success btn-lg">1</button>
-                <span> - пси (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button class="btn btn-success btn-lg" routerLink="/quiz/vocabulary/insekti">1</button>
+                <span> - инсекти</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
@@ -49,13 +49,12 @@
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
-                    routerLink="/quiz/vocabulary/insekti">4</button>
-                <span> - инсекти</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                    routerLink="/quiz/vocabulary/ptice">4</button>
+                <span> - птице</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
-                    routerLink="/quiz/vocabulary/ptice">5</button>
-                <span> - птице</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button>
+                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">6</button>
@@ -65,36 +64,32 @@
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">7</button>
                 <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
-            <div class="col-md-2 column">
-                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">8</button>
-                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>
         </div>
         <br /><br />
         <div class="row">
             <h3>Квизови из граматике</h3><br />
             <div class="col-md-2 column">
-            <button class="btn btn-success btn-lg">1</button><span> - todo: kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button class="btn btn-success btn-lg">1</button><span> - todo: kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-            <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">2</button><span> - todo:
-                kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">2</button><span> - todo:
+                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-            <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">3</button><span> - todo:
-                kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">3</button><span> - todo:
+                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-            <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">4</button><span> - todo:
-                kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>    
-            <div class="col-md-2 column">
-            <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button><span> - todo:
-                kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">4</button><span> - todo:
+                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-            <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">6</button><span> - todo:
-                kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button><span> - todo:
+                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="col-md-2 column">
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">6</button><span> - todo:
+                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
         </div>
     </div>
