--- a/src/app/kvizovi/refleksi-sonantnog-l/refleksi-sonantnog-l.component.html
+++ b/src/app/kvizovi/refleksi-sonantnog-l/refleksi-sonantnog-l.component.html
@@ -6,7 +6,7 @@
                     alt="nema slike" width="90">
             </div>
             <div class="quiz-header">
-                <h4 style="font-family: cursive;">грађење речника - кухиња</h4>
+                <h4 style="font-family: cursive;">граматика - рефлекси сонантног л</h4>
                 <span style="font-style: italic;">Корисник: {{name}}</span>
             </div>
         </div>
@@ -28,14 +28,14 @@
                     [ngStyle]="{'width':progress+'%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="question">
-                <div class="card" style="white-space: pre;">
+                <div class="card">
                     <h3>{{questionList[currentQuestion]?.questionText}}</h3>
                 </div>
             </div>
             <div class="options">
                 <ol *ngFor="let option of questionList[currentQuestion]?.options">
                     <li (click)="answer(currentQuestion+1, option)">
-                        <div appChangeBg [isCorrect]="option.correct" class="card" style="white-space: pre;">
+                        <div appChangeBg [isCorrect]="option.correct" class="card">
                             {{option.text}}
                         </div>
                     </li>
