welcome page message

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,9 +1,8 @@
 <div class="container bg-light py-5">
     <h1 class="display-5 fw-bold">Школа ПТДГ језика за говорнике БСХЦ језика</h1>
-    <p class="col-md-8 fs-4">Школа ПТДГ језика је пројекат намењен "оживљавању" поменутог језика како код омладине
-        области
-        у којој се говори, која га све мање разуме, тако и код старијих који су га помало и заборавили. <br>
-        На сајту можете наћи разноврсне квизове који изграђују ваш вокабулар и тестирају ваше познавање ПТДГ граматике.
+    <p class="col-md-8 fs-4">Школа ПТДГ језика је пројекат намењен популаризацији поменутог језика, првенствено код
+        омладине која га све мање разуме и све ређе користи. <br>
+        Доле ниже можете наћи разноразне квизове који изграђују ваш вокабулар и тестирају ваше познавање ПТДГ граматике.
     </p>
     <h4>Правила квизова:</h4>
     <ol>
