quiz vocab months of the year

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -52,8 +52,9 @@
                 <span> - птице</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button>
-                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
+                    routerLink="/quiz/vocabulary/sinonimi_meseci">5</button>
+                <span> - синоними - месеци у години</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">6</button>
