quiz gramm glagolski pridev radni

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -69,7 +69,8 @@
         <div class="row">
             <h3>Квизови из граматике</h3><br />
             <div class="col-md-2 column">
-                <button class="btn btn-success btn-lg">1</button><span> - todo: kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button class="btn btn-success btn-lg"
+                routerLink="/quiz/grammar/radni-glagolski-pridev">1</button><span> - радни глаголски придев</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg" 
