text mlogo s6m se muchilla

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -93,6 +93,17 @@
                     kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
         </div>
+        <br/><br/>
+        <div class="row">
+            <h3>Текстови</h3><br />
+            <div class="col-md-2 column">
+                <button class="btn btn-success btn-lg" 
+                routerLink="/quiz/text/mlogo-s6m-se-muchila">1</button><span> - Мло̀го съм се мучѝла</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="col-md-2 column">
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg" >2</button><span> - TODO</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
+        </div>
     </div>
     <hr>
 </div>
