--- a/src/app/tekstovi/mlogo-s6m-se-muchila/mlogo-s6m-se-muchila.component.html
+++ b/src/app/tekstovi/mlogo-s6m-se-muchila/mlogo-s6m-se-muchila.component.html
@@ -16,11 +16,11 @@
                 <h3 style="text-align: center;">Мло̀го съм се мучѝла</h3>
                 <hr>
                 <p style="text-align: justify;">
-                    &nbsp; &nbsp; &nbsp; Па ме мој та̀тко бања̀ја у котъ̀л. Ишчува̀ја ме сам, без ма̀јку. Ја не съм била̀ кадъ̀р сама̀ да се мѝјем.<br/>
+                    &nbsp; &nbsp; &nbsp; Па ме мој та̀тко бања̀ја у котъ̀л. Ишчува̀ја ме сам, без ма̀јку. Ја не съм била̀ кадъ̀р сама̀ да се мѝем.<br/>
                     &nbsp; &nbsp; &nbsp; Мло̀го съм се мучѝла малѐцка. Та̀тко мѐси па ме мѐне ỳчи да мѐсим. Па ја мѐсим. Замѐсим ԓеб 
-                    мумурỳзън у грънъ̀ц. Угорѝм цръпỳљу, па скѝнем цръпỳљу бръ̀го, што пре. Она̀ се све цръвенѐје. Ја што пре, да обръ̀нем 
+                    мумурỳзън у грънъ̀ц. Угорѝм цръпỳљу, па скѝнем цръпỳљу бръ̀го, што пре. Она̀ се све цръвенѐе. Ја што пре, да обръ̀нем 
                     грънъ̀ц да сѝпем ԓеб да се испечѐ, ќе ми остѝне цръпỳља. А он не ќе да се испечѐ. Два пръ̀ста бԓизнѝца што је мло̀го 
-                    врѐла цръпỳља. Гԓѐтав одоздо̀л. И мој та̀тко ќе рѐкне: "Ма ти, дѐте, к'о овъ̀ј ԓеб печѐш?" Ја ќу му казỳјем: "Па 
+                    врѐла цръпỳља. Гԓѐтав одоздо̀л. И мој та̀тко ќе рѐкне: "Ма ти, дѐте, к'о овъ̀ј ԓеб печѐш?" Ја ќу му казỳем: "Па 
                     тăко̀ј, та̀те - горѝ цръпỳља, ја скѝнем цръпỳљу и исѝпем ԓеб".<br/>
                     &nbsp; &nbsp; &nbsp; Е, једънпỳт, замѐсим. Àјде, цръпỳљу тỳрим. Он, та̀тко ми, туј седѝ. Вѝка: "Àјде, скѝѓај 
                     цръпỳљу!" Ја скина̀, обриса̀ цръпỳљу с пача̀вру, насолѝ бра̀шно. Ќу обръ̀нем ԓеб, жỳрим да га сѝпем у цръпỳљу, она̀ 
