something from yesterday

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -69,20 +69,23 @@
         <div class="row">
             <h3>Квизови из граматике</h3><br />
             <div class="col-md-2 column">
-                <button class="btn btn-success btn-lg"
-                routerLink="/quiz/grammar/radni-glagolski-pridev">1</button><span> - радни глаголски придев</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button class="btn btn-success btn-lg" routerLink="/quiz/grammar/radni-glagolski-pridev">1</button>
+                <span> - радни глаголски придев</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg" 
-                routerLink="/quiz/grammar/refleksi-sonantnog-l">2</button><span> - рефлекси слоготворног л</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                routerLink="/quiz/grammar/refleksi-sonantnog-l">2</button>
+                <span> - рефлекси слоготворног л</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">3</button><span> - todo:
-                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
+                routerLink="/quiz/grammar/brojevi-i-brojne-imenice">3</button>
+                <span> - бројеви и бројне именице</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
-                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">4</button><span> - todo:
-                    kviz</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg"
+                routerLink="/quiz/grammar/vokativ">4</button>
+                <span> - вокатив</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
             <div class="col-md-2 column">
                 <button [disabled]="nameKey===undefined" class="btn btn-success btn-lg">5</button><span> - todo:
