--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -14,9 +14,9 @@
         <li>Сваки нетачан одговор се кажњава са -10 поена</li>
         <li>Питање се може прескочити и отићи на следеће, али се штоперица не ресетује</li>
         <li>Могуће је вратити се на претходно питање, али се то кажњава са -10 поена</li>
-        <li>Уколико желите приступ свим квизовима морате бити пријављени на ваш налог</li>
+        <li>Уколико желите приступ свим квизовима морате бити пријављени на Ваш налог</li>
     </ol>
-    <h1 style="font-family: cursive; text-align: center;">срећно учење!</h1>
+    <h1 style="font-family: 'Lucida Grande'; text-align: center;">срећно учење!</h1>
 
     <!--<ng-container *ngIf="nameKey === undefined">-->
     <div class="name col-md-4 my-3">
