--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,10 +2,12 @@
     <h1 class="display-6 fw-bold">Школа ПТДГ језика</h1>
     <p class="col-md-8 fs-4">Школа ПТДГ 
         (<a routerLink="/info-page"><em>призренско-тимочка дијалекатска група</em></a>) језика је пројекат 
-        намењен забавном и активном усвајању поменутог <span class="fw-bold">језика</span> путем 
-        квизова. <br>
+        намењен забавном и активном усвајању поменутог језика путем квизова.<br>
         Доле ниже можете наћи разноразне квизове који изграђују ваш вокабулар и тестирају ваше познавање граматике 
-        ових говора, а за напредније студенте ту су и краћи текстови са питањима.
+        ових говора, а за напредније студенте ту су и краћи текстови са питањима.<br>
+        Акценат је стављен претежно на призренско-јужноморавски дијалекат, конкретније на јужноморавски поддијалекат 
+        (уз одређене примесе других призренско-јужноморавских говора, као и других ПТДГ говора уопште).<br>
+        Детаљнији преглед особина различитих ПТДГ говора можете наћи <a><em>овде</em></a>.
     </p>
     <h4>Правила квизова:</h4>
     <ol>
