--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,11 @@
         alt="logo" width="180">
       </a>
       <span class="text-uppercase"></span>
-      <!--<p>А а Б б В в Г г Ѓ ѓ Д д Е е Ж ж Ѕ ѕ З з И и Ј ј К к Ќ ќ Л л Ԓ ԓ Љ љ 
-        М м Н н Њ њ О о П п Р р С с Т т У у Ф ф Х х Ц ц Ч ч Џ џ Ш ш Ъ ъ</p>-->
-      <p style="font-family: tahoma;">ъ̀ а̀ ѝ ѐ о̀ ỳ  Л л Ԓ ԓ Љ љ й ă</p>
+      <!--<p>А а Б б В в Г г Ѓ ѓ Д д Е е Ж ж Ѕ ѕ З з И и Ј ј К к Ќ ќ Л л Љ љ 
+        М м Н н Њ њ О о П п Р р С с Т т У у Ц ц Ч ч Џ џ Ш ш Ъ ъ</p>
+      Ф ф - само у косовским призренско-јужноморавским говорима под утицајем албанског и турског који имају ф 
+      Х х - слабо игде стога нигде 
+      -->
+      <p style="font-family: tahoma;">ъ̀ а̀ ѝ ѐ о̀ ỳ й ă </p>
     </div>
 </nav>
