--- a/src/app/tekstovi/mlogo-s6m-se-muchila-kviz/mlogo-s6m-se-muchila-kviz.component.html
+++ b/src/app/tekstovi/mlogo-s6m-se-muchila-kviz/mlogo-s6m-se-muchila-kviz.component.html
@@ -63,7 +63,7 @@
                     <p>Број нетачни одговори: {{incorrectAnswer}} </p>
                     <p>Број бодови: {{points}} </p>
                     <br>
-                    <button class="btn btn-success" routerLink="/welcome">погԓедни ги остали квизови</button>
+                    <button class="btn btn-success" routerLink="/welcome">погледни ги остали квизови</button>
                     <br><br>
                     <button class="btn btn-success" (click)="resetQuiz()"><i
                         class="fa fa-refresh" aria-hidden="true"></i> решавај га па̀ овъј квиз</button>
