--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -7,7 +7,7 @@
         ових говора, а за напредније студенте ту су и краћи текстови са питањима.<br>
         Акценат је стављен претежно на призренско-јужноморавски дијалекат, конкретније на јужноморавски поддијалекат 
         (уз одређене примесе других призренско-јужноморавских говора, као и других ПТДГ говора уопште).<br>
-        Детаљнији преглед особина различитих ПТДГ говора можете наћи <a><em>овде</em></a>.
+        Детаљнији преглед особина различитих ПТДГ говора можете наћи <a href="#"><em>овде</em></a>.
     </p>
     <h4>Правила квизова:</h4>
     <ol>
