--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,14 @@
       <a class="navbar-brand text-bold" href="#">
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Flag_of_Macedonia_-_ethnic.svg" 
         alt="logo" width="180">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Mali_grb_leskovac_new.png/480px-Mali_grb_leskovac_new.png" 
+        alt="leskov6c" width="90" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Emblem_of_Pirot.png"
+        alt="pirot" width="70" height="90">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/archive/9/9d/20181222003757%21Grb_Ni%C5%A1a.png"
+        alt="nish" width="90" height="90">
+        <img src="https://prokuplje.org.rs/wp-content/uploads/2017/08/Grb-Prokuplja.png"
+        alt="prokupje" width="70" height="90">
       </a>
       <span class="text-uppercase"></span>
       <!--<p>А а Б б В в Г г Ѓ ѓ Д д Е е Ж ж Ѕ ѕ З з И и Ј ј К к Ќ ќ Л л Љ љ 
