--- a/src/app/kvizovi/insekti/insekti.component.html
+++ b/src/app/kvizovi/insekti/insekti.component.html
@@ -7,7 +7,12 @@
             </div>
             <div class="quiz-header">
                 <h4 style="font-family: cursive;">грађење речника - инсекти</h4>
-                <span style="font-style: italic;">Корисник: {{name}}</span>
+                <ng-container *ngIf="name !== null">
+                    <span style="font-style: italic;">Корисник: {{name}}</span>
+                </ng-container>
+                <ng-container *ngIf="name === null">
+                    <span style="font-style: italic;">Корисник: Нисте пријављени!</span>
+                </ng-container>
             </div>
         </div>
 
